--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-
-tensorflow==2.10.0
-numpy>=1.20,<1.24
-scikit-learn>=0.24,<1.3
-streamlit
+tensorflow>=2.15.0
+numpy>=1.23.5,<2.0.0
 pandas
+streamlit>=1.30.0
 matplotlib
 seaborn
-
-
+scikit-learn
+Pillow
