--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-# 核心深度学习框架 (参考本地 2.13.0 版本)
+# 核心框架：对应你本地的 2.13.0，但在 Linux 云端使用标准的 tensorflow 包
 tensorflow==2.13.0
 
-# 基础科学计算 (精确匹配本地版本)
+# 基础计算：锁定到你本地的 1.23.0 和 2.0.3
 numpy==1.23.0
 pandas==2.0.3
 scipy==1.10.1
 
-# 可视化与界面 (精确匹配本地版本)
+# 界面与绘图：精确匹配本地版本
 streamlit==1.40.1
 matplotlib==3.7.5
 seaborn==0.13.2
 scikit-learn==1.2.1
 
-# 辅助依赖
+# 核心辅助依赖
 pillow==10.4.0
 h5py==3.11.0
+typing-extensions==4.12.2
